--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = atmelavr
 board = uno
 framework = arduino
+lib_deps =
+   br3ttb/PID @ ^1.2.1
+   adafruit/Adafruit Motor Shield Library
+   jrowberg/i2cdevlib-MPU6050
