feat: adds balance control to the car

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,5 @@ lib_deps =
    adafruit/Adafruit Motor Shield Library
    jrowberg/i2cdevlib-MPU6050
    EnableInterrupt
+   MsTimer2
+   MPU6050_6Axis_MotionApps20
